--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -74,7 +74,8 @@
         }
         .button-container {
             display: flex;
-            justify-content: space-between;
+            justify-content: space-between; /* وضع الأزرار بجانب بعضها */
+            gap: 10px; /* إضافة مسافة بين الأزرار */
         }
     </style>
 </head>
