--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -6,7 +6,7 @@
     <title>تفاصيل المحامي</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-   <style>
+    <style>
         body {
             font-family: 'Tajawal', sans-serif;
             background-color: #f0f3f6;
@@ -162,7 +162,7 @@
                         instagramLink.title = `حساب ${lawyer.name} على إنستغرام`;
 
                         // Update booking button link with lawyer info
-                        bookingButton.href = `booking.html?id=${lawyerId}&name=${encodeURIComponent(lawyer.name)}&address=${encodeURIComponent(lawyer.address)}&phone=${encodeURIComponent(lawyer.phone)}&description=${encodeURIComponent(lawyer.description)}`;
+                        bookingButton.href = `booking.html?id=${lawyerId}&name=${encodeURIComponent(lawyer.name)}&address=${encodeURIComponent(lawyer.address)}&phone=${encodeURIComponent(lawyer.phone)}&description=${encodeURIComponent(lawyer.description)}&image=${encodeURIComponent(lawyer.image)}`;
                     } else {
                         console.log("لا يوجد محامي بهذا المعرف");
                         document.querySelector('.lawyer-details').innerHTML = '<p>عذراً، لم يتم العثور على بيانات لهذا المحامي.</p>';
