--- a/booking.html
+++ b/booking.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>صفحة الحجز</title>
+    <title>حجز موعد</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: 'Tajawal', sans-serif;
@@ -22,13 +21,8 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
-        .booking-form h1 {
-            margin-bottom: 20px;
-            color: #3498db;
-            font-size: 30px;
-        }
         .form-group {
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         .form-group label {
             display: block;
@@ -40,11 +34,10 @@
             padding: 10px;
             border: 1px solid #bdc3c7;
             border-radius: 5px;
-            font-size: 16px;
         }
         .form-group textarea {
-            resize: vertical;
             height: 100px;
+            resize: vertical;
         }
         .submit-button {
             display: inline-block;
@@ -52,10 +45,13 @@
             border-radius: 8px;
             color: #fff;
             background-color: #e67e22;
+            text-decoration: none;
             font-size: 18px;
             font-weight: 600;
-            text-decoration: none;
             transition: background-color 0.3s ease, transform 0.3s ease;
+            margin-top: 20px;
+            text-align: center;
+            display: block;
         }
         .submit-button:hover {
             background-color: #d35400;
@@ -65,37 +61,37 @@
 </head>
 <body>
     <div class="booking-form">
-        <h1>طلب حجز</h1>
+        <h1>احجز موعداً مع المحامي</h1>
         <form id="booking-form">
-            <input type="hidden" id="lawyer-id" name="lawyerId">
-            <input type="hidden" id="lawyer-name" name="lawyerName">
-            <input type="hidden" id="lawyer-address" name="lawyerAddress">
-            <input type="hidden" id="lawyer-phone" name="lawyerPhone">
-            <input type="hidden" id="lawyer-description" name="lawyerDescription">
-
             <div class="form-group">
-                <label for="user-name">اسمك</label>
-                <input type="text" id="user-name" name="userName" required>
+                <label for="name">الاسم:</label>
+                <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
-                <label for="user-address">عنوانك</label>
-                <input type="text" id="user-address" name="userAddress" required>
+                <label for="address">العنوان:</label>
+                <input type="text" id="address" name="address" required>
             </div>
             <div class="form-group">
-                <label for="user-phone">رقم هاتفك</label>
-                <input type="text" id="user-phone" name="userPhone" required>
+                <label for="phone">رقم الهاتف:</label>
+                <input type="tel" id="phone" name="phone" required>
             </div>
             <div class="form-group">
-                <label for="booking-details">تفاصيل الحجز</label>
-                <textarea id="booking-details" name="bookingDetails" required></textarea>
+                <label for="details">تفاصيل الحجز:</label>
+                <textarea id="details" name="details" required></textarea>
             </div>
-            <button type="submit" class="submit-button">إرسال الطلب</button>
+            <input type="hidden" id="lawyer-id" name="lawyer-id">
+            <input type="hidden" id="lawyer-name" name="lawyer-name">
+            <input type="hidden" id="lawyer-address" name="lawyer-address">
+            <input type="hidden" id="lawyer-phone" name="lawyer-phone">
+            <input type="hidden" id="lawyer-description" name="lawyer-description">
+            <input type="hidden" id="lawyer-image" name="lawyer-image">
+            <a href="#" id="submit-button" class="submit-button">إرسال</a>
         </form>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-
+    
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDGpAHia_wEmrhnmYjrPf1n1TrAzwEMiAI",
@@ -116,45 +112,35 @@
             const lawyerAddress = urlParams.get('address');
             const lawyerPhone = urlParams.get('phone');
             const lawyerDescription = urlParams.get('description');
-
+            const lawyerImage = urlParams.get('image');
+            
             if (lawyerId) {
                 document.getElementById('lawyer-id').value = lawyerId;
                 document.getElementById('lawyer-name').value = lawyerName;
                 document.getElementById('lawyer-address').value = lawyerAddress;
                 document.getElementById('lawyer-phone').value = lawyerPhone;
                 document.getElementById('lawyer-description').value = lawyerDescription;
-            } else {
-                alert("لم يتم تحديد المحامي. يرجى العودة واختيار محامي من القائمة.");
-                window.location.href = "index.html";
-            }
-        });
+                document.getElementById('lawyer-image').value = lawyerImage;
 
-        document.getElementById('booking-form').addEventListener('submit', function(e) {
-            e.preventDefault();
+                document.getElementById('submit-button').addEventListener('click', function(e) {
+                    e.preventDefault();
+                    const formData = new FormData(document.getElementById('booking-form'));
+                    const data = {};
+                    formData.forEach((value, key) => {
+                        data[key] = value;
+                    });
 
-            const formData = new FormData(e.target);
-            const bookingData = {
-                lawyerId: formData.get('lawyerId'),
-                lawyerName: formData.get('lawyerName'),
-                lawyerAddress: formData.get('lawyerAddress'),
-                lawyerPhone: formData.get('lawyerPhone'),
-                lawyerDescription: formData.get('lawyerDescription'),
-                userName: formData.get('userName'),
-                userAddress: formData.get('userAddress'),
-                userPhone: formData.get('userPhone'),
-                bookingDetails: formData.get('bookingDetails'),
-                timestamp: new Date()
-            };
-
-            db.collection('bookings').add(bookingData)
-                .then(() => {
-                    alert("تم إرسال طلب الحجز بنجاح.");
-                    window.location.href = "index.html";
-                })
-                .catch(error => {
-                    console.error("خطأ في إرسال طلب الحجز:", error);
-                    alert("حدث خطأ أثناء إرسال الطلب. يرجى المحاولة مرة أخرى.");
+                    db.collection('bookings').add(data).then(() => {
+                        alert('تم إرسال طلب الحجز بنجاح!');
+                        window.location.href = 'index.html';
+                    }).catch(error => {
+                        console.error('خطأ في إرسال طلب الحجز:', error);
+                        alert('حدث خطأ أثناء إرسال طلب الحجز. يرجى المحاولة مرة أخرى.');
+                    });
                 });
+            } else {
+                alert('لم يتم تحديد بيانات المحامي.');
+            }
         });
     </script>
 </body>
