--- a/booking.html
+++ b/booking.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>حجز موعد</title>
+    <title>صفحة الحجز</title>
     <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         body {
             font-family: 'Tajawal', sans-serif;
@@ -21,8 +22,13 @@
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.2);
         }
+        .booking-form h1 {
+            margin-bottom: 20px;
+            color: #3498db;
+            font-size: 30px;
+        }
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
         .form-group label {
             display: block;
@@ -34,10 +40,11 @@
             padding: 10px;
             border: 1px solid #bdc3c7;
             border-radius: 5px;
+            font-size: 16px;
         }
         .form-group textarea {
-            height: 100px;
             resize: vertical;
+            height: 100px;
         }
         .submit-button {
             display: inline-block;
@@ -45,13 +52,10 @@
             border-radius: 8px;
             color: #fff;
             background-color: #e67e22;
-            text-decoration: none;
             font-size: 18px;
             font-weight: 600;
+            text-decoration: none;
             transition: background-color 0.3s ease, transform 0.3s ease;
-            margin-top: 20px;
-            text-align: center;
-            display: block;
         }
         .submit-button:hover {
             background-color: #d35400;
@@ -61,37 +65,37 @@
 </head>
 <body>
     <div class="booking-form">
-        <h1>احجز موعداً مع المحامي</h1>
+        <h1>طلب حجز</h1>
         <form id="booking-form">
+            <input type="hidden" id="lawyer-id" name="lawyerId">
+            <input type="hidden" id="lawyer-name" name="lawyerName">
+            <input type="hidden" id="lawyer-address" name="lawyerAddress">
+            <input type="hidden" id="lawyer-phone" name="lawyerPhone">
+            <input type="hidden" id="lawyer-description" name="lawyerDescription">
+
             <div class="form-group">
-                <label for="name">الاسم:</label>
-                <input type="text" id="name" name="name" required>
+                <label for="user-name">اسمك</label>
+                <input type="text" id="user-name" name="userName" required>
             </div>
             <div class="form-group">
-                <label for="address">العنوان:</label>
-                <input type="text" id="address" name="address" required>
+                <label for="user-address">عنوانك</label>
+                <input type="text" id="user-address" name="userAddress" required>
             </div>
             <div class="form-group">
-                <label for="phone">رقم الهاتف:</label>
-                <input type="tel" id="phone" name="phone" required>
+                <label for="user-phone">رقم هاتفك</label>
+                <input type="text" id="user-phone" name="userPhone" required>
             </div>
             <div class="form-group">
-                <label for="details">تفاصيل الحجز:</label>
-                <textarea id="details" name="details" required></textarea>
+                <label for="booking-details">تفاصيل الحجز</label>
+                <textarea id="booking-details" name="bookingDetails" required></textarea>
             </div>
-            <input type="hidden" id="lawyer-id" name="lawyer-id">
-            <input type="hidden" id="lawyer-name" name="lawyer-name">
-            <input type="hidden" id="lawyer-address" name="lawyer-address">
-            <input type="hidden" id="lawyer-phone" name="lawyer-phone">
-            <input type="hidden" id="lawyer-description" name="lawyer-description">
-            <input type="hidden" id="lawyer-image" name="lawyer-image">
-            <a href="#" id="submit-button" class="submit-button">إرسال</a>
+            <button type="submit" class="submit-button">إرسال الطلب</button>
         </form>
     </div>
 
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script>
-    
+
     <script>
         const firebaseConfig = {
             apiKey: "AIzaSyDGpAHia_wEmrhnmYjrPf1n1TrAzwEMiAI",
@@ -112,35 +116,45 @@
             const lawyerAddress = urlParams.get('address');
             const lawyerPhone = urlParams.get('phone');
             const lawyerDescription = urlParams.get('description');
-            const lawyerImage = urlParams.get('image');
-            
+
             if (lawyerId) {
                 document.getElementById('lawyer-id').value = lawyerId;
                 document.getElementById('lawyer-name').value = lawyerName;
                 document.getElementById('lawyer-address').value = lawyerAddress;
                 document.getElementById('lawyer-phone').value = lawyerPhone;
                 document.getElementById('lawyer-description').value = lawyerDescription;
-                document.getElementById('lawyer-image').value = lawyerImage;
-
-                document.getElementById('submit-button').addEventListener('click', function(e) {
-                    e.preventDefault();
-                    const formData = new FormData(document.getElementById('booking-form'));
-                    const data = {};
-                    formData.forEach((value, key) => {
-                        data[key] = value;
-                    });
-
-                    db.collection('bookings').add(data).then(() => {
-                        alert('تم إرسال طلب الحجز بنجاح!');
-                        window.location.href = 'index.html';
-                    }).catch(error => {
-                        console.error('خطأ في إرسال طلب الحجز:', error);
-                        alert('حدث خطأ أثناء إرسال طلب الحجز. يرجى المحاولة مرة أخرى.');
-                    });
-                });
             } else {
-                alert('لم يتم تحديد بيانات المحامي.');
+                alert("لم يتم تحديد المحامي. يرجى العودة واختيار محامي من القائمة.");
+                window.location.href = "index.html";
             }
+        });
+
+        document.getElementById('booking-form').addEventListener('submit', function(e) {
+            e.preventDefault();
+
+            const formData = new FormData(e.target);
+            const bookingData = {
+                lawyerId: formData.get('lawyerId'),
+                lawyerName: formData.get('lawyerName'),
+                lawyerAddress: formData.get('lawyerAddress'),
+                lawyerPhone: formData.get('lawyerPhone'),
+                lawyerDescription: formData.get('lawyerDescription'),
+                userName: formData.get('userName'),
+                userAddress: formData.get('userAddress'),
+                userPhone: formData.get('userPhone'),
+                bookingDetails: formData.get('bookingDetails'),
+                timestamp: new Date()
+            };
+
+            db.collection('bookings').add(bookingData)
+                .then(() => {
+                    alert("تم إرسال طلب الحجز بنجاح.");
+                    window.location.href = "index.html";
+                })
+                .catch(error => {
+                    console.error("خطأ في إرسال طلب الحجز:", error);
+                    alert("حدث خطأ أثناء إرسال الطلب. يرجى المحاولة مرة أخرى.");
+                });
         });
     </script>
 </body>
