--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -9,40 +9,28 @@
     <style>
         body {
             font-family: 'Tajawal', sans-serif;
-            background-color: #f7f9fc;
+            background-color: #f0f3f6;
             color: #2c3e50;
             margin: 0;
             padding: 20px;
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: center;
-            min-height: 100vh;
         }
-
         .container {
             display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
+            flex-direction: column;
+            width: 100%;
             max-width: 1000px;
             margin: 0 auto;
-            gap: 20px;
         }
-
         .box {
-            width: 100%;
-            max-width: 480px;
             padding: 20px;
             background-color: #fff;
             border-radius: 10px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-            transition: transform 0.3s ease;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            margin-bottom: 20px;
         }
-
-        .box:hover {
-            transform: translateY(-5px);
-        }
-
         .lawyer-image {
             width: 100%;
             max-height: 300px;
@@ -50,21 +38,17 @@
             border-radius: 10px;
             margin-bottom: 20px;
         }
-
         .info-title {
             color: #3498db;
             font-size: 24px;
             font-weight: 700;
-            margin-bottom: 10px;
-            text-align: center;
+            margin-bottom: 15px;
         }
-
         .info-item {
-            margin-bottom: 10px;
+            margin-bottom: 15px;
             font-size: 18px;
             color: #34495e;
         }
-
         .info-item input,
         .info-item textarea {
             width: 100%;
@@ -72,14 +56,12 @@
             border: 1px solid #bdc3c7;
             border-radius: 5px;
             font-size: 16px;
-            box-sizing: border-box;
+            margin-top: 5px;
         }
-
         .info-item textarea {
             resize: vertical;
-            height: 80px;
+            height: 100px;
         }
-
         .booking-button {
             display: inline-block;
             padding: 12px 25px;
@@ -94,24 +76,9 @@
             text-align: center;
             width: 100%;
         }
-
         .booking-button:hover {
             background-color: #d35400;
             transform: scale(1.05);
-        }
-
-        @media screen and (max-width: 768px) {
-            .box {
-                width: 90%;
-            }
-
-            .info-title {
-                font-size: 22px;
-            }
-
-            .info-item {
-                font-size: 16px;
-            }
         }
     </style>
 </head>
@@ -130,22 +97,10 @@
         <!-- مربع المستخدم -->
         <div class="box">
             <div class="info-title">بيانات المستخدم</div>
-            <div class="info-item">
-                <label for="user-name">الاسم</label>
-                <input type="text" id="user-name" placeholder="أدخل اسمك">
-            </div>
-            <div class="info-item">
-                <label for="user-address">العنوان</label>
-                <input type="text" id="user-address" placeholder="أدخل عنوانك">
-            </div>
-            <div class="info-item">
-                <label for="user-phone">الهاتف</label>
-                <input type="text" id="user-phone" placeholder="أدخل رقم هاتفك">
-            </div>
-            <div class="info-item">
-                <label for="booking-details">تفاصيل الحجز</label>
-                <textarea id="booking-details" placeholder="أدخل تفاصيل الحجز"></textarea>
-            </div>
+            <div class="info-item">الاسم: <input type="text" id="user-name" placeholder="أدخل اسمك"></div>
+            <div class="info-item">العنوان: <input type="text" id="user-address" placeholder="أدخل عنوانك"></div>
+            <div class="info-item">الهاتف: <input type="text" id="user-phone" placeholder="أدخل رقم هاتفك"></div>
+            <div class="info-item">تفاصيل الحجز: <textarea id="booking-details" placeholder="أدخل تفاصيل الحجز"></textarea></div>
         </div>
     </div>
 
@@ -156,13 +111,13 @@
     
     <script>
         const firebaseConfig = {
-            apiKey: "YOUR_FIREBASE_API_KEY",
-            authDomain: "YOUR_FIREBASE_AUTH_DOMAIN",
-            databaseURL: "YOUR_FIREBASE_DATABASE_URL",
-            projectId: "YOUR_FIREBASE_PROJECT_ID",
-            storageBucket: "YOUR_FIREBASE_STORAGE_BUCKET",
-            messagingSenderId: "YOUR_FIREBASE_MESSAGING_SENDER_ID",
-            appId: "YOUR_FIREBASE_APP_ID"
+            apiKey: "AIzaSyDGpAHia_wEmrhnmYjrPf1n1TrAzwEMiAI",
+            authDomain: "messageemeapp.firebaseapp.com",
+            databaseURL: "https://messageemeapp-default-rtdb.firebaseio.com",
+            projectId: "messageemeapp",
+            storageBucket: "messageemeapp.appspot.com",
+            messagingSenderId: "278680662267",
+            appId: "1:278680662267:web:cb9a86a0cd4709b86222b2"
         };
         firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
