--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -204,6 +204,7 @@
                                 alert('تم إرسال الحجز بنجاح!');
                             }).catch(error => {
                                 console.error("خطأ في إرسال الحجز:", error);
+                                alert('حدث خطأ أثناء إرسال الحجز. يرجى المحاولة مرة أخرى لاحقاً.');
                             });
                         });
                     } else {
