--- a/lawyer-details.html
+++ b/lawyer-details.html
@@ -217,7 +217,7 @@
                             db.collection('bookings').add({
                                 lawyerId: lawyerId,
                                 lawyerName: lawyer.name,
-                                lawyerImage: lawyer.image,
+                                Image: lawyer.image,
                                 lawyerAddress: lawyer.address,
                                 lawyerPhone: lawyer.phone,
                                 lawyerDescription: lawyer.description,
