--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <i class="fas fa-gavel"></i>
                 <h2>محامون</h2>
             </a>
-            <a href="دليل الاطباء.html" class="category" data-category="أطباء">
+            <a href="doctors.html" class="category" data-category="أطباء">
                 <i class="fas fa-user-md"></i>
                 <h2>أطباء</h2>
             </a>
