--- a/doctors.html
+++ b/doctors.html
@@ -712,7 +712,7 @@
             }
 
             function showLawyerDetails(lawyer) {
-                window.location.href = `lawyer-details.html?id=${lawyer.id}`;
+                window.location.href = `lawyer3-details.html?id=${lawyer.id}`;
             }
 
             menuBtn.addEventListener('click', openSidebar);
