--- a/lawyer4-details.html
+++ b/lawyer4-details.html
@@ -141,7 +141,7 @@
         <!-- مربع المحامي -->
         <div class="box">
             <img id="lawyer-image" class="lawyer-image" src="" alt="صورة المحامي">
-            <div class="info-title">بيانات الدكتور</div>
+            <div class="info-title">بيانات السيارة</div>
             <div id="lawyer-name" class="info-item"></div>
             <div id="lawyer-address" class="info-item"></div>
             <div id="lawyer-phone" class="info-item"></div>
