--- a/lawyer2-details.html
+++ b/lawyer2-details.html
@@ -214,7 +214,7 @@
                             const userPhone = document.getElementById('user-phone').value;
                             const bookingDetails = document.getElementById('booking-details').value;
 
-                            db.collection('bookings').add({
+                            db.collection('bookings1').add({
                                 lawyerId: lawyerId,
                                 lawyerName: lawyer.name,
                                 Image: lawyer.image,
