--- a/lawyer3-details.html
+++ b/lawyer3-details.html
@@ -140,7 +140,7 @@
     <div class="container">
         <!-- مربع المحامي -->
         <div class="box">
-            <img id="lawyer-image" class="lawyer-image" src="" alt="صورة المحامي">
+            <img id="lawyer-image" class="lawyer-image" src="" alt="صورة الدكتور">
             <div class="info-title">بيانات الدكتور</div>
             <div id="lawyer-name" class="info-item"></div>
             <div id="lawyer-address" class="info-item"></div>
