--- a/index.html
+++ b/index.html
@@ -313,9 +313,113 @@
                 <i class="fas fa-dumbbell"></i>
                 <h2>رياضة</h2>
             </a>
-        </div>
-    </main>
-
+        <a href="lawyer9-details.html" class="category" data-category="فنادق">
+                    <i class="fas fa-hotel"></i>
+                    <h2>فنادق</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="أيادي عاملة">
+                    <i class="fas fa-hands-helping"></i>
+                    <h2>أيادي عاملة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="سيارات أجرة">
+                    <i class="fas fa-taxi"></i>
+                    <h2>سيارات أجرة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="تكاتك أجرة">
+                    <i class="fas fa-motorcycle"></i>
+                    <h2>تكاتك أجرة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="مرطبات">
+                    <i class="fas fa-glass-cheers"></i>
+                    <h2>مرطبات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="وجبات سريعة">
+                    <i class="fas fa-hamburger"></i>
+                    <h2>وجبات سريعة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="صالونات">
+                    <i class="fas fa-cut"></i>
+                    <h2>صالونات</h2>
+                </a>
+                <a href="wedding-suits.html" class="category" data-category="بدلات أعراس">
+                    <i class="fas fa-tshirt"></i>
+                    <h2>بدلات أعراس</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="ملابس">
+                    <i class="fas fa-shopping-bag"></i>
+                    <h2>ملابس</h2>
+                </a>
+                <a href=" lawyer9-details.html" class="category" data-category="مولات">
+                    <i class="fas fa-shopping-cart"></i>
+                    <h2>مولات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="أجهزة كهربائية">
+                    <i class="fas fa-blender"></i>
+                    <h2>أجهزة كهربائية</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="موبايلات">
+                    <i class="fas fa-mobile-alt"></i>
+                    <h2>موبايلات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="ساعات">
+                    <i class="fas fa-clock"></i>
+                    <h2>ساعات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="إكسسوارات">
+                    <i class="fas fa-gem"></i>
+                    <h2>إكسسوارات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="مفروشات">
+                    <i class="fas fa-couch"></i>
+                    <h2>مفروشات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="إلكترونيات">
+                    <i class="fas fa-laptop"></i>
+                    <h2>إلكترونيات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="صيدليات">
+                    <i class="fas fa-pills"></i>
+                    <h2>صيدليات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="جامعات">
+                    <i class="fas fa-university"></i>
+                    <h2>جامعات</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="مدارس خاصة">
+                    <i class="fas fa-school"></i>
+                    <h2>مدارس خاصة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="تذاكر سفر">
+                    <i class="fas fa-ticket-alt"></i>
+                    <h2>تذاكر سفر</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="مدرسين">
+                    <i class="fas fa-chalkboard-teacher"></i>
+                    <h2>مدرسين</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="أدوات حلاقة">
+                    <i class="fas fa-cut"></i>
+                    <h2>أدوات حلاقة</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="دراجات نارية">
+                    <i class="fas fa-motorcycle"></i>
+                    <h2>دراجات نارية</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="ملابس عسكرية">
+                    <i class="fas fa-shield-alt"></i>
+                    <h2>ملابس عسكرية</h2>
+                </a>
+                <a href="lab-tools.html" class="category" data-category="أدوات مختبر">
+                    <i class="fas fa-vial"></i>
+                    <h2>أدوات مختبر</h2>
+                </a>
+                <a href="lawyer9-details.html" class="category" data-category="عيادات">
+                    <i class="fas fa-clinic-medical"></i>
+                    <h2>عيادات</h2>
+                </a>
+            </div>
+        </main>
+    </div>
     <div id="bottom-toolbar">
         <a href="index.html"><i class="fas fa-home"></i><span>الرئيسية</span></a>
         <a href="favorites.html"><i class="fas fa-heart"></i><span>المفضلة</span></a>
